<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/back"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img"
    tools:context=".ReadActivity"
    android:orientation="vertical">

    <ListView
        android:id="@+id/listViewArt"
        android:layout_width="378dp"
        android:layout_height="608dp"
        android:stackFromBottom="true"
        android:transcriptMode="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.12" />

    <Button
        android:id="@+id/btnSave"
        android:layout_width="156dp"
        android:layout_height="42dp"
        android:layout_marginBottom="4dp"
        android:onClick="saveData"
        android:text="@string/send"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.623"
        app:layout_constraintStart_toStartOf="parent"
        app:rippleColor="#3C0606" />

    <Button
        android:id="@+id/button"
        android:layout_width="101dp"
        android:layout_height="42dp"
        android:layout_marginBottom="4dp"
        android:onClick="addImg"
        android:text="@string/image"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.187"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonLang2"
        android:layout_width="62dp"
        android:layout_height="42dp"
        android:layout_marginBottom="4dp"
        android:onClick="setLang"
        android:text="@string/lang"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button" />

    <Button
        android:id="@+id/outAccount"
        android:layout_width="96dp"
        android:layout_height="42dp"
        android:layout_marginBottom="4dp"
        android:onClick="clickOut"
        android:text="@string/out"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="368dp"
        android:layout_height="46dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text=""
        android:hint="Text"
        app:layout_constraintBottom_toTopOf="@+id/btnSave"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>